...
                    android:layout_marginLeft="6dp"
                    android:src="@drawable/ic_share_white"
                    android:actionProviderClass=
                        "android.widget.ShareActionProvider"/>

                <ImageButton
                    android:id="@+id/button_bookmark"
                    android:background="@drawable/bookmark_button"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="6dp" />
...
